migrate to IDEA;change encoding to UTF-8