@@ -1,54 +1,54 @@
 package cn.zerokirby.note;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.net.URLEncoder;
-
 import javax.servlet.ServletException;
 import javax.servlet.ServletOutputStream;
 import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * Servlet implementation class DownloadAvatarServlet
  */
 @WebServlet("/DownloadAvatarServlet")
-public class DownloadAvatarServlet extends HttpServlet { // ÏÂÔØÍ·Ïñservlet
-	private static final long serialVersionUID = 1L;
+public class DownloadAvatarServlet extends HttpServlet { // ä¸‹è½½å¤´åƒservlet
+    private static final long serialVersionUID = 1L;
 
-	/**
-	 * @see HttpServlet#doGet(HttpServletRequest request, HttpServletResponse
-	 *      response)
-	 */
-	protected void doGet(HttpServletRequest request, HttpServletResponse response)
-			throws ServletException, IOException {
-		// TODO Auto-generated method stub
-		final String fileRoot = "/usr/local/avatar";// ÎÄ¼þ´æ´¢¸ùÄ¿Â¼
+    /**
+     * @see HttpServlet#doGet(HttpServletRequest request, HttpServletResponse
+     * response)
+     */
+    protected void doGet(HttpServletRequest request, HttpServletResponse response)
+            throws ServletException, IOException {
+        // TODO Auto-generated method stub
+        final String fileRoot = "/usr/local/avatar";// æ–‡ä»¶å­˜å‚¨æ ¹ç›®å½•
 
-		int userId = Integer.valueOf(request.getParameter("userId").trim());// »ñÈ¡ÓÃ»§ID
+        int userId = Integer.valueOf(request.getParameter("userId").trim());// èŽ·å–ç”¨æˆ·ID
 
-		final String avatarPath = UserDAO.queryAvatarPath(userId);
+        final String avatarPath = UserDAO.queryAvatarPath(userId);
 
-		if (avatarPath != null) {// Èç¹û´æÔÚÍ·Ïñ
-			final String filePath = fileRoot + avatarPath;
-			final File file = new File(filePath);// ´´½¨ÎÄ¼þ
-			if (file.exists()) {
-				response.setHeader("content-disposition",
-						"attachment;filename=" + URLEncoder.encode(userId + ".jpg", "UTF-8"));
+        if (avatarPath != null) {// å¦‚æžœå­˜åœ¨å¤´åƒ
+            final String filePath = fileRoot + avatarPath;
+            final File file = new File(filePath);// åˆ›å»ºæ–‡ä»¶
+            if (file.exists()) {
+                response.setHeader("content-disposition",
+                        "attachment;filename=" + URLEncoder.encode(userId + ".jpg", StandardCharsets.UTF_8));
 
-				FileInputStream inputStream = new FileInputStream(filePath);// ¿ªÆôÎÄ¼þÊäÈëÁ÷
-				ServletOutputStream servletOutputStream = response.getOutputStream();// ServletÊä³öÁ÷
-				byte[] buffer = new byte[1024];// »º³åÇø
-				int len;
-				while ((len = inputStream.read(buffer)) > 0) {// Ã»Ð´Íê¼ÌÐøÐ´
-					servletOutputStream.write(buffer, 0, len);
-				}
-				inputStream.close();
-				servletOutputStream.close();
-			}
+                FileInputStream inputStream = new FileInputStream(filePath);// å¼€å¯æ–‡ä»¶è¾“å…¥æµ
+                ServletOutputStream servletOutputStream = response.getOutputStream();// Servletè¾“å‡ºæµ
+                byte[] buffer = new byte[1024];// ç¼“å†²åŒº
+                int len;
+                while ((len = inputStream.read(buffer)) > 0) {// æ²¡å†™å®Œç»§ç»­å†™
+                    servletOutputStream.write(buffer, 0, len);
+                }
+                inputStream.close();
+                servletOutputStream.close();
+            }
 		}
 	}
 
